@@ -55,6 +55,7 @@
       <li><a href="ACMPortalHelp.html">Fetching entries from <em>ACM</em> Portal</a></li>
       <li><a href="CiteSeerHelp.html">Fetching entries from <em>CiteSeerX</em></a></li>
       <li><a href="IEEEXploreHelp.html">Fetching entries from <em>IEEExplore</em></a></li>
+      <li><a href="ISBNtoBibTeXHelp.html">Fetching entries using the <em>ISBN to BibTeX Converter</em></a>
       <li><a href="MedlineHelp.html">Fetching entries from <em>Medline</em></a></li>
       <li><a href="JSTOR.html"><em>JStor</em> search</a></li>
       <li><a href="ScienceDirect.html"><em>ScienceDirect</em> search</a></li>
