@@ -1,0 +1,20 @@
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<link rel="stylesheet" type="text/css" href="jabref_help.css"/>
+</head>
+
+<body>
+    <h1>Fetching entries using the ISBN number</h1>
+
+    <p>To use this feature, choose <b>Search -&gt; Web search</b>, and the
+    search interface will appear in the side pane. Select <b>ISBN to BibTeX</b> in the dropdown menu.</p>
+
+    <p>This fetcher uses <a href="http://manas.tungare.name/software/isbn-to-bibtex/">Manas Tungare's ISBN to BibTeX Converter</a>
+    to convert an ISBN to a BibTeX entry.</p>
+
+    <p>Enter the ISBN number in the search field and press <b>Enter</b> or the <b>Fetch</b>
+    button. The entry will be fetched will be added to your currently active
+    database. In case an error occurs, it is shown in a popup.</p>
+
+</body>
+</html>
