@@ -1,0 +1,4 @@
+/**
+ * This package will contain all entry fetchers derived from net.sf.jabref.imports.Fetcher
+ */
+package net.sf.jabref.imports.fetcher;
