@@ -135,6 +135,15 @@
         value="Fetch Entries from DBLP." />
     </extension>
 
+    <extension id="ISBNtoBibTeXFetcher" plugin-id="net.sf.jabref.core"
+       point-id="EntryFetcher">
+      <parameter id="entryFetcher"
+        value="net.sf.jabref.imports.fetcher.ISBNtoBibTeXFetcher" />
+      <parameter id="name" value="ISBN to BibTeX Fetcher" />
+      <parameter id="description"
+        value="Fetch entries based on ISBN." />
+    </extension>
+
     <!--<extension id="GoogleScholarFetcher" plugin-id="net.sf.jabref.core"
 		point-id="EntryFetcher">
       <parameter id="entryFetcher"
