@@ -43,6 +43,7 @@
       - clean up month (functionality based on patch 3470076 by Mathias Walter)
       - clean up pages
       - fix superscripts
+    - New "ISBN to BibTeX" fetcher. Uses the online "ISBN to BibTeX Converter" service by Manas Tungare.
     - Added support for drag'n'drop of tabs by Florian Straßer and Marius Kleiner.
     - PDF import dialog now always stores settings: checkbox removed
     - float search now also jumps to first entry if entry editor is opened
